syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Suggestion/Support/Grpc/Protos/model.proto";
service CreateAccommodationGrpcService {
  rpc createAccommodation (CreateAccommodationProto) returns (CreateAccommodationProtoResponse);
}